# rabdulatipoff-evvve-test

./: .env.compose  .env.local  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: pr.yaml  quality.yaml
src/rabdulatipoff_evvve_test/: client.py  config.py  logger.py  main.py  parser.py  routes.py
src/rabdulatipoff_evvve_test/api/: parser.py  routes.py
src/rabdulatipoff_evvve_test/storage/: cache.py  client.py  schemas.py
