[project]
name = "rabdulatipoff-evvve-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rustam Abdulatipov", email = "rabdulatipoff@gmail.com"},
]
dependencies = [
    "fastapi[slim]>=0.111.0",
    "aiohttp[speedups]>=3.9.5",
    "install>=1.3.5",
    "emcache>=1.2.1",
    "aiohttp-retry>=2.8.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-3.0-only"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.24.0",
    "pylint>=3.2.2",
]
pytest = [
    "pytest-cov>=5.0.0",
]
